--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-    <center>毕业设计</center>
-    {{message}}
-    <script src="http://localhost:8080/js/vendors.js"></script>
-    <script src="http://localhost:8080/js/index.js"></script>
-    </body>
-</html>
+<div class="container">
+	{{message}}
+</div>
