--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -1,3 +1,31 @@
-<div class="container">
-	{{message}}
+<div class="container-fluid">
+	<div class="jumbotron">
+		<h1>Hello, world!</h1>
+		<p>{{message}}</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="jumbotron">
+		<h1>Hello, world!</h1>
+		<p>{{message}}</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="jumbotron">
+		<h1>Hello, world!</h1>
+		<p>{{message}}</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="jumbotron">
+		<h1>Hello, world!</h1>
+		<p>{{message}}</p>
+		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+	</div>
 </div>
