--- a/src/server/views/layouts/layout.hbs
+++ b/src/server/views/layouts/layout.hbs
@@ -10,6 +10,7 @@
 <body>
     {{>header}}
 	{{{body}}}
+	{{>footer}}
 	<script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="http://localhost:8080/js/vendors.js"></script>
