--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -1,9 +1,5 @@
-<div class="container-fluid">
-	<div class="jumbotron">
-		<h1>Hello, world!</h1>
-		<p>{{message}}</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-	</div>
+<div class="container-fluid" style="background-color:#6f5499;height:300px;margin-bottom:50px;">
+    <h1 class="text-center" style="font-size:70px;font-family:'微软雅黑';color:white;padding-top:100px">开启你的软件工程师生涯</h1>
 </div>
 
 <div class="container-fluid">
