--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -1,27 +1,31 @@
 <div class="container-fluid" style="background-color:#6f5499;height:300px;margin-bottom:50px;">
     <h1 class="text-center" style="font-size:70px;font-family:'微软雅黑';color:white;padding-top:100px">开启你的软件工程师生涯</h1>
+    <div class="center-block" align="center">
+        <a href="/signin" class="btn btn-warning btn-lg">开始学习</a>
+        <a href="/signup" class="btn btn-default btn-lg">立即注册</a>
+    </div>
 </div>
 
 <div class="container-fluid">
-	<div class="jumbotron">
-		<h1>Hello, world!</h1>
-		<p>{{message}}</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-	</div>
+    <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>{{message}}</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
 </div>
 
 <div class="container-fluid">
-	<div class="jumbotron">
-		<h1>Hello, world!</h1>
-		<p>{{message}}</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-	</div>
+    <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>{{message}}</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
 </div>
 
 <div class="container-fluid">
-	<div class="jumbotron">
-		<h1>Hello, world!</h1>
-		<p>{{message}}</p>
-		<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-	</div>
+    <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>{{message}}</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
 </div>
