--- a/src/server/views/signin.hbs
+++ b/src/server/views/signin.hbs
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="col-md-4 col-md-offset-4 " align="center">
         <h1>账户登录</h1>
-        <form>
+        <form action="/signin" method="POST">
             <div class="form-group">
-                <input class="form-control" type="text" placeholder="用户名"/>
+                <input class="form-control" type="text" placeholder="用户名" name="username"/>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" placeholder="密码"/>
+                <input class="form-control" type="password" placeholder="密码" name="password"/>
             </div>
             <div class="form-group">
-                <button class="form-control btn btn-success">登录</button>
+                <button  class="form-control btn btn-success">登录</button>
             </div>
         </form>
     </div>
