--- a/src/server/views/layouts/layout.hbs
+++ b/src/server/views/layouts/layout.hbs
@@ -5,23 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<style>
-    .container {
-        min-height: 800px;
-    }
-
-    .center-block {
-        display: block;
-        width:50%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-</style>
 <body>
 {{>header}}
 {{{body}}}
