添加课程列表页面

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,13 @@
+html, body, div, span, a, li, td, th {
+    font-family: '微软雅黑', 'Lato', sans-serif;
+}
+
+a{
+    font-weight: bold;
+    cursor: hand;
+    text-decoration:none;
+}
+
 .container {
     min-height: 800px;
 }
@@ -7,4 +17,44 @@
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.map-accordion {
+    width:700px;
+    margin:155px auto 0;
+    position: relative;
+}
+
+.map-accordion h2 > a {
+    width:100%;
+    display: block;
+    background-color: #efefef;
+    padding:10px 0;
+    padding-left: 50px;
+    padding-right: 20px;
+}
+
+.map-accordion h3 > a {
+    padding-left: 60px;
+    padding-bottom: 10px;
+    display: block;
+    max-width: 535px;
+}
+
+.map-accordion div > div:last-child {
+    margin-bottom: 30px;
+}
+
+.map-accordion div.chapterBlock p{
+    text-indent: -15px;
+    margin-left: 120px;
+    padding-right: 20px;
+}
+
+.no-transition {
+  -webkit-transition: height 0.001s;
+  -moz-transition: height 0.001s;
+  -ms-transition: height 0.001s;
+  -o-transition: height 0.001s;
+  transition: height 0.001s;
 }
