--- a/src/server/views/layouts/layout.hbs
+++ b/src/server/views/layouts/layout.hbs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <title>mini-code-camp</title>
+    <title>{{title}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -9,9 +10,9 @@
 </head>
 <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 <body>
-{{>header}}
-{{{body}}}
-{{>footer}}
+    {{>header}} {{{body}}} {{>footer}}
 </body>
+
 </html>
