--- a/src/server/views/course.hbs
+++ b/src/server/views/course.hbs
@@ -21,7 +21,7 @@
         </h3>
         <div id="nested1" class="collapse chapterBlock">
           <p>
-            <a href="#">
+            <a href="/challenge/1">
               Learn how Free Code Camp Works
               </a>
           </p>
