--- a/src/server/views/challenge.hbs
+++ b/src/server/views/challenge.hbs
@@ -4,12 +4,57 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-3 col-lg-3">
-            <button class="btn btn-success" type="button">    Run Test </button>
-            <div class="output">
-                <form class="code">
-                    <textarea id="codeOutPut" style="display: none"></textarea>
-                </form>
+            <div id="scroll-locker" class="scroll-locker" style="min-height: 306px; height: 800px;">
+                <div style="width: 99%; min-height: 1000px;" class="innerMarginFix">
+                    <div class="row">
+                        <div class="col-xs-12"><h4 class="text-center challenge-instructions-title">Say Hello to HTML
+                            Elements</h4>
+                            <hr>
+                            <div class="challenge-instructions"><p class="wrappable">Welcome to Free Code Camp's first
+                                coding challenge.</p>
+                                <p class="wrappable">You can edit <code>code</code> in your <code>text editor</code>,
+                                    which we've embedded into this web page.</p>
+                                <p class="wrappable">Do you see the code in your text editor that says <code>&lt;h1&gt;Hello&lt;/h1&gt;</code>?
+                                    That's an HTML <code>element</code>.</p>
+                                <p class="wrappable">Most HTML elements have an <code>opening tag</code> and a <code>closing
+                                    tag</code>.</p>
+                                <p class="wrappable">Opening tags look like this:</p>
+                                <p class="wrappable"><code>&lt;h1&gt;</code></p>
+                                <p class="wrappable">Closing tags look like this:</p>
+                                <p class="wrappable"><code>&lt;/h1&gt;</code></p>
+                                <p class="wrappable">Note that the only difference between opening tags and closing tags
+                                    is that closing tags have a slash after their opening angle bracket.</p>
+                                <p class="wrappable">Each challenge has tests that you can run at any time by clicking
+                                    the "Run tests" button. Once you get all tests passing, you can advance to the next
+                                    challenge.</p>
+                                <p class="wrappable">To pass the test on this challenge, change your <code>h1</code>
+                                    element's text to say "Hello World" instead of "Hello". Then click the "Run tests"
+                                    button.</p>
+                                <div class="negative-bottom-margin-30"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="button-spacer"></div>
+                    <button id="submitButton" class="btn-big btn btn-success btn-block">Run tests
+                    </button>
+                    <div class="button-spacer"></div>
+                    <div class="button-spacer"></div>
+                    <div id="testSuite">
+                        <div>
+                            <div class="row">
+                                <div class="col-xs-2 text-center">
+                                    <i class="ion-close-circled big-error-icon"></i>
+                                </div>
+                                <div class="col-xs-10 test-output">
+                                    Your <code>h1</code> element should have the text "Hello World".
+                                </div>
+                                <div class="ten-pixel-break"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <br></div>
             </div>
+            <div class="button-spacer"></div>
         </div>
         <div class="col-md-5 col-lg-6">
             <div class="editorScrollDiv">
@@ -23,8 +68,10 @@
 
         </div>
         <div class="col-md-4 col-lg-3">
-            <div class="preview">
-                <iframe frameborder="0" id="preview" class="iphone"></iframe>
+            <div class="panel panel-default">
+                <div class="panel-body preview">
+                    <iframe frameborder="0" id="preview" class="iphone"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -44,10 +91,10 @@
         var delay;
 
         var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
-            lint: { esversion: 6 },
+            lint: {esversion: 6},
             lineNumbers: true,
-            //mode: 'text/html',
-            mode: 'javascript',
+            mode: 'text/html',
+//            mode: 'javascript',
             theme: 'monokai',
             runnable: true,
             matchBrackets: true,
@@ -69,6 +116,7 @@
             preview.write(editor.getValue());
             preview.close();
         }
+
         setTimeout(updatePreview, 300);
 
         var output = CodeMirror.fromTextArea(document.getElementById("codeOutPut"), {
