--- a/src/server/views/course.hbs
+++ b/src/server/views/course.hbs
@@ -6,6 +6,7 @@
     </div>
 </div>
 <div class="container">
+    <div class="map-wrapper">
     {{#each blocks as |block superBlock|}}
         <div class="map-accordion" id="accordion">
             <h2>
@@ -33,6 +34,7 @@
             </div>
         </div>
     {{/each}}
+    </div>
 </div>
 <script id="challenges" type="text/x-handlebars-template">
     \{{#each this}}
