添加断言库Chai

--- a/src/server/views/challenge.hbs
+++ b/src/server/views/challenge.hbs
@@ -50,6 +50,21 @@
         </div>
     </div>
 </div>
+
+<script id="error" type="text/x-handlebars-template">        
+    <div>
+        <div class="row">
+            <div class="col-xs-2 text-center">
+                <i class="glyphicon glyphicon-remove"></i>
+            </div>
+            <div class="col-xs-10 test-output">
+                \{{message}}
+            </div>
+            <div class="ten-pixel-break"></div>
+        </div>
+    </div>
+</script>
+
 <script src="//cdn.bootcss.com/codemirror/5.25.0/codemirror.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/mode/xml/xml.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/mode/javascript/javascript.min.js"></script>
