--- a/src/server/views/signin.hbs
+++ b/src/server/views/signin.hbs
@@ -1,16 +1,47 @@
 <div class="container">
     <div class="col-md-4 col-md-offset-4 " align="center">
         <h1>账户登录</h1>
-        <form action="/signin" method="POST">
+        <form action="/signin" method="POST" id="signin">
             <div class="form-group">
-                <input class="form-control" type="text" placeholder="用户名" name="username"/>
+                <input class="form-control" type="text" placeholder="用户名" name="username" id="username"/>
             </div>
             <div class="form-group">
-                <input class="form-control" type="password" placeholder="密码" name="password"/>
+                <input class="form-control" type="password" placeholder="密码" name="password" id="password"/>
             </div>
+            {{#if message}}
+                <div class="form-group">
+                    <p class="text-danger">{{message}}</p>
+                </div>
+            {{/if}}
             <div class="form-group">
-                <button  class="form-control btn btn-success">登录</button>
+                <button  class="form-control btn btn-success" id="signin_btn" type="button">登录</button>
             </div>
         </form>
     </div>
 </div>
+<script>
+    (function () {
+
+        var form = {
+            validate: function () {
+                var $username = $('#username'),
+                    $password = $('#password');
+                $username.val() ? $username.parent().removeClass('has-error') : $username.parent().addClass('has-error');
+                $password.val() ? $password.parent().removeClass('has-error') : $password.parent().addClass('has-error');
+                return $username.val() && $password.val() ;
+            },
+            submit: function () {
+                $('#signin').submit();
+            }
+        };
+
+        $(document).ready(function () {
+            $('#signin_btn').click(function () {
+                if (form.validate()) {
+                    form.submit();
+                }
+            })
+        });
+
+    })();
+</script>
