--- a/src/server/views/partials/footer.hbs
+++ b/src/server/views/partials/footer.hbs
@@ -1,5 +1,5 @@
 <footer>
-	<div class="container-fluid" style="background-color:#e7e7e7;height:300px;padding-top:100px">
+	<div class="container-fluid footer">
 		<div class="text-center">
 			<address>
 				<strong>Twitter, Inc.</strong><br> 795 Folsom Ave, Suite 600<br> San Francisco, CA 94107<br>
