--- a/src/server/views/challenge.hbs
+++ b/src/server/views/challenge.hbs
@@ -9,7 +9,7 @@
     }
 </script>
 
-<div class="container-fluid">
+<div class="container-fluid" style="margin: 10px 0">
     <div class="row">
         <div class="col-md-3 col-lg-3">
             <div id="scroll-locker" class="scroll-locker" style="min-height: 306px; height: 800px;">
