--- a/src/server/views/signup.hbs
+++ b/src/server/views/signup.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-md-4 col-md-offset-4 " align="center">
+    <div class="col-md-4 col-md-offset-4 login" align="center">
         <h1>账户注册</h1>
         <form action="/user" method="POST" id="signup">
             <div class="form-group">
@@ -13,7 +13,7 @@
                 <input class="form-control" type="password" placeholder="确认密码" name="confirm" id="confirm"/>
             </div>
             <div class="form-group">
-                <button type="button" class="form-control btn btn-info" id="signup_btn">注册</button>
+                <button type="button" class="form-control btn btn-primary" id="signup_btn">注册</button>
             </div>
         </form>
     </div>
