去掉Vue相关代码

--- a/src/server/views/challenge.hbs
+++ b/src/server/views/challenge.hbs
@@ -5,7 +5,7 @@
 <script>
     window.__state__ = {
         challengeType:{{challenge.challengeType}},
-        tests:{{{json tests}}}
+        tests:{{{json tests}}},
     }
 </script>
 
@@ -100,6 +100,7 @@
 
 <script src="//cdn.bootcss.com/jshint/2.9.4/jshint.min.js"></script>
 <script src="//cdn.bootcss.com/chai/4.0.0-canary.1/chai.min.js"></script>
+
 <script src="//cdn.bootcss.com/codemirror/5.25.0/codemirror.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/addon/comment/comment.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/addon/edit/closebrackets.min.js"></script>
