--- a/src/server/views/course.hbs
+++ b/src/server/views/course.hbs
@@ -1,7 +1,7 @@
 <div class=" container-fluid banner jumbotron">
     <h2>课程表</h2>
     <p>强烈建议按照学习顺序来学习，不要到处跳跃。</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">立即注册</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/signup" role="button">立即注册</a></p>
 </div>
 <hr>
 <div class="container">
