--- a/src/server/views/layouts/layout.hbs
+++ b/src/server/views/layouts/layout.hbs
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <title>{{title}}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+  <title>{{title}}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="//cdn.bootcss.com/handlebars.js/4.0.6/handlebars.min.js"></script>
-    <script src="//cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script>
-    {{>header}} {{{body}}} {{>footer}}
+  <script src="//cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+  <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="//cdn.bootcss.com/handlebars.js/4.0.6/handlebars.min.js"></script>
+  <script src="//cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script>
+  {{>header}}
+  {{{body}}}
+  {{>footer}}
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
