删除不必要的代码

--- a/src/server/views/course.hbs
+++ b/src/server/views/course.hbs
@@ -46,22 +46,4 @@
     </p>
     \{{/each}}
 </script>
-<script>
-    (function () {
-
-        $(document).ready(function () {
-
-            $('.subBlock').click(function () {
-                var blockId = $(this).attr('data-id');
-                $.ajax('/api/blocks/' + blockId + '/challenges').done(function (data) {
-                    var template = Handlebars.compile($('#challenges').html());
-                    var html = template(data);
-                    $('#nested'+blockId).html(html);
-                });
-            });
-
-
-        });
-
-    })();
-</script>
+<script src="/js/course.js"></script>
