--- a/src/server/views/signin.hbs
+++ b/src/server/views/signin.hbs
@@ -19,29 +19,4 @@
         </form>
     </div>
 </div>
-<script>
-    (function () {
-
-        var form = {
-            validate: function () {
-                var $username = $('#username'),
-                    $password = $('#password');
-                $username.val() ? $username.parent().removeClass('has-error') : $username.parent().addClass('has-error');
-                $password.val() ? $password.parent().removeClass('has-error') : $password.parent().addClass('has-error');
-                return $username.val() && $password.val() ;
-            },
-            submit: function () {
-                $('#signin').submit();
-            }
-        };
-
-        $(document).ready(function () {
-            $('#signin_btn').click(function () {
-                if (form.validate()) {
-                    form.submit();
-                }
-            })
-        });
-
-    })();
-</script>
+<script src="/js/signin.js"></script>
