--- a/src/server/views/challenge.hbs
+++ b/src/server/views/challenge.hbs
@@ -111,3 +111,5 @@
 <script src="//cdn.bootcss.com/codemirror/5.25.0/mode/xml/xml.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/mode/css/css.min.js"></script>
 <script src="//cdn.bootcss.com/codemirror/5.25.0/mode/htmlmixed/htmlmixed.min.js"></script>
+
+<script src="/js/challenge.js"></script>
