优化注册登录体验

--- a/src/server/views/signin.hbs
+++ b/src/server/views/signin.hbs
@@ -14,7 +14,7 @@
                 </div>
             {{/if}}
             <div class="form-group">
-                <button  class="form-control btn btn-success" id="signin_btn" type="button">登录</button>
+                <button  class="form-control btn btn-success" type="submit">登录</button>
             </div>
         </form>
     </div>
