--- a/src/server/views/signup.hbs
+++ b/src/server/views/signup.hbs
@@ -12,7 +12,7 @@
 				<input class="form-control" type="password" placeholder="确认密码" name="confirm" id="confirm" />
 			</div>
 			<div class="form-group">
-				<button type="button" class="form-control btn btn-primary" id="signup_btn">注册</button>
+				<button type="submit" class="form-control btn btn-primary" >注册</button>
 			</div>
 		</form>
 	</div>
