--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -1,25 +1,47 @@
 <div class="container-fluid first" style="margin-bottom: 0">
     <h1 class="text-center slogan" style="margin-bottom: 30px">开启你的软件工程师生涯</h1>
     <div class="center-block" align="center">
-        <a href="/signin" class="btn btn-default big-btn btn-lg" >开始学习</a>
+        <a href="/signin" class="btn btn-default big-btn btn-lg">开始学习</a>
         <a href="/signup" class="btn btn-default big-btn btn-lg">立即注册</a>
     </div>
 </div>
 
 <div class="jumbotron container-fluid banner" style="margin-bottom: 0">
-    <h1>Hello, world!</h1>
-    <p>{{message}}</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    <h3>来这里学习最酷的技术</h3>
+    <div class="row">
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-html5"></i><br>HTML5</div>
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-css3"></i><br>CSS3</div>
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-javascript"></i><br>Javascript</div>
+    </div>
+    <div class="row">
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-github"></i><br>Git &amp; GitHub</div>
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-nodejs"></i><br>Node.js</div>
+        <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-tux"></i><br>Databases</div>
+    </div>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">我要学习</a></p>
+</div>
+<hr>
+<div class="jumbotron container-fluid banner" style="margin-bottom: 0;background-color:'#ddeee3'">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <h3>课程路线</h3>
+        <ul class="list-group">
+            <li class="list-group-item"> 响应式网页设计</li>
+            <li class="list-group-item"> JavaScript算法和数据结构</li>
+            <li class="list-group-item"> 前端框架</li>
+            <li class="list-group-item"> 数据可视化</li>
+            <li class="list-group-item"> API和微服务架构</li>
+            <li class="list-group-item"> 信息安全和软件质量保证</li>
+            <li class="list-group-item"> 为开源项目贡献代码</li>
+            <li class="list-group-item"> 软件工程师面试题</li>
+        </ul>
+        <p><a class="btn btn-primary btn-lg" href="/course" role="button">快去看看</a></p>
+    </div>
+    <div class="col-md-4"></div>
 </div>
 <hr>
 <div class="jumbotron container-fluid banner" style="margin-bottom: 0">
-    <h1>Hello, world!</h1>
+    <h1>Hello, world</h1>
     <p>{{message}}</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-</div>
-<hr>
-<div class="jumbotron container-fluid banner" style="margin-bottom: 0">
-    <h1>Hello, world!</h1>
-    <p>{{message}}</p>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/course" role="button">你好世界</a></p>
 </div>
