--- a/src/server/views/partials/footer.hbs
+++ b/src/server/views/partials/footer.hbs
@@ -2,12 +2,12 @@
 	<div class="container-fluid footer">
 		<div class="text-center">
 			<address>
-				<strong>Twitter, Inc.</strong><br> 795 Folsom Ave, Suite 600<br> San Francisco, CA 94107<br>
-				<abbr title="Phone">P:</abbr> (123) 456-7890
+				<strong>江汉大学</strong><br>数学与计算机科学学院<br>
+				<abbr title="Phone">毕业设计：</abbr>在线编程平台的设计与实现
 			</address>
 
 			<address>
-				<strong>Full Name</strong><br>
+				<strong>徐正威</strong><br>
 				<a href="mailto:#">xuzhengwei.amor@gmail.com</a>
 			</address>
 		</div>
