--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -7,7 +7,7 @@
 </div>
 
 <div class="jumbotron container-fluid banner" style="margin-bottom: 0">
-    <h3>来这里学习最酷的技术</h3>
+    <h2 style="font-size:40px;">来这里学习最酷的技术</h2>
     <div class="row">
         <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-html5"></i><br>HTML5</div>
         <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-css3"></i><br>CSS3</div>
@@ -24,7 +24,7 @@
 <div class="jumbotron container-fluid banner" style="margin-bottom: 0;background-color:'#ddeee3'">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-        <h3>课程路线</h3>
+        <h3 style="font-size:40px;">课程路线</h3>
         <ul class="list-group">
             <li class="list-group-item"> 响应式网页设计</li>
             <li class="list-group-item"> JavaScript算法和数据结构</li>
