--- a/src/server/views/index.hbs
+++ b/src/server/views/index.hbs
@@ -18,7 +18,7 @@
         <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-nodejs"></i><br>Node.js</div>
         <div class="col-xs-8 col-md-4 skills"><i class="fa ion-social-tux"></i><br>Databases</div>
     </div>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">我要学习</a></p>
+    <p><a class="btn btn-primary btn-lg" href="/signup" role="button">我要学习</a></p>
 </div>
 <hr>
 <div class="jumbotron container-fluid banner" style="margin-bottom: 0;background-color:'#ddeee3'">
